--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="api-token" content="">
+    <meta name="api-token" content="{% if api_token is defined %} {{ api_token }} {% endif %}">
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -19,7 +19,54 @@
     <script type="text/javascript" src='/assets/js/tasks.js'></script>
 </head>
 
+
 <body>
+        <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm mb-5">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    Todo List
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <!-- Left Side Of Navbar -->
+                    <ul class="navbar-nav mr-auto">
+
+                    </ul>
+
+                    <!-- Right Side Of Navbar -->
+                    <ul class="navbar-nav ml-auto">
+                        <!-- Authentication Links -->
+                        {% if name is not defined %} 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
+                   
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                        </li>
+                        {% endif %}
+
+                        <li class="nav-item dropdown">
+                            <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
+                                {% if name is defined %} {{ name }} {% endif %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+
 {% block content %}{% endblock %}
 </body>
 
